update page.tsx, layout.tsx and globals.css

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -48,3 +48,9 @@
     --ring: 240 4.9% 83.9%;
   }
 }
+@media screen and (max-width: 250px) {
+  * {
+    visibility: hidden;
+    background: #28282b;
+  }
+}
